test/dummy/app/views/errors/_details.html.slim
table.data.error-page-details
	- @details.each do |k, v|
		- unless k==:backtrace
			tr
				td.key= k
				td.value= v